@@ -1,59 +1,43 @@
 import org.json.JSONObject;
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.*;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 public class Api {
 
-    private BufferedReader rawResponse;
-    private StringBuilder request;
-    private URL url;
+    URI uri;
+    private String response;
     public float latitude;
     public float longitude;
-    public  int time;
+    public int time;
 
     public Api() {
         try {
-            this.url= new URL("http://api.open-notify.org/iss-now.json");
-        } catch (MalformedURLException e) {
-            System.out.println("Zły url");
+            this.uri= new URI("http://api.open-notify.org/iss-now.json");
+        } catch (URISyntaxException e) {
+            System.out.println("Wrong URL");
         }
-
     }
 
-
-    public void requestGET() throws IOException {
-
-        // Sends new GET request to url
+    public void fetch() throws InterruptedException, IOException {
         sendNewRequest();
-
-        // Reading data from request
-        readRequest();
-
-        // Updates 3 values this api class returns
         updateValues();
     }
 
-    private void sendNewRequest() throws IOException {
-        this.url.getContent(); // sends new GET request
-        HttpURLConnection con = (HttpURLConnection) this.url.openConnection();
-        rawResponse = new BufferedReader(new InputStreamReader(con.getInputStream()));
-    }
-
-    private void readRequest() throws IOException {
-        String inputLine;
-        request = new StringBuilder();
-        while ((inputLine = rawResponse.readLine()) != null) {request.append(inputLine);}
-        rawResponse.close();
+    private void sendNewRequest() throws InterruptedException, IOException {
+        HttpClient client = HttpClient.newHttpClient();
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(this.uri)
+                .GET()
+                .build();
+        this.response = client.send(request, HttpResponse.BodyHandlers.ofString()).body();
     }
 
     private void updateValues(){
-        JSONObject json_response = new JSONObject(request.toString());
+        JSONObject json_response = new JSONObject(this.response);
         JSONObject position = (JSONObject) json_response.get("iss_position");
-
         this.latitude = position.getFloat("latitude");
         this.longitude = position.getFloat("longitude");
         this.time = json_response.getInt("timestamp");
